--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5001",
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.1",
     "@stripe/react-stripe-js": "^2.6.2",
