--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "concurrently \"npm run start:backend\" \"npm run start:python\"",
+    "start": "node src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start:backend": "node src/server.js",
     "start:python": "python src/Data/update_csv_from_mongodb.py"
   },
